--- a/src/app/ticket/communication/communication.component.scss
+++ b/src/app/ticket/communication/communication.component.scss
@@ -16,8 +16,8 @@
 
 .communication-container {
   max-width: 100%;
-  margin: 2rem auto;
-  padding: 0 1rem;
+  // margin: 2rem auto;
+  // padding: 0 1rem;
 
   mat-card {
     margin-bottom: 2rem;
@@ -119,7 +119,7 @@
 
     .actions {
       flex-direction: column;
-      
+
       button {
         width: 100%;
       }
