--- a/src/app/ticket/ticket-generation-form/ticket-generation-form.component.html
+++ b/src/app/ticket/ticket-generation-form/ticket-generation-form.component.html
@@ -107,7 +107,7 @@
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
     <!-- Attachments -->
-    <div class="file-upload-section">
+    <!-- <div class="file-upload-section">
       <label class="mat-body-1">Attachments</label>
       <div class="file-upload-container mat-elevation-z1">
         <input
@@ -138,7 +138,7 @@
           </button>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Additional Notes -->
     <mat-form-field appearance="outline" class="full-width">
