--- a/src/app/ticket/ticket-list/ticket-list.component.html
+++ b/src/app/ticket/ticket-list/ticket-list.component.html
@@ -97,7 +97,11 @@
           <mat-icon>edit</mat-icon>
           Edit
         </button>
-        <button mat-button color="warn" (click)="deleteTicket(ticket)" *ngIf="ticket.statusName !== 'Closed'">
+        <!-- <button mat-button color="warn" (click)="deleteTicket(ticket)" *ngIf="ticket.statusName !== 'Closed'">
+          <mat-icon>delete</mat-icon>
+          Delete
+        </button> -->
+        <button mat-button color="warn" (click)="deleteTicketById(ticket.id)" *ngIf="ticket.statusName !== 'Closed'">
           <mat-icon>delete</mat-icon>
           Delete
         </button>
