--- a/src/app/ticket/ticket-detail/ticket-detail.component.html
+++ b/src/app/ticket/ticket-detail/ticket-detail.component.html
@@ -5,9 +5,10 @@
       Back to Tickets
     </button> -->
     <div class="right-actions" *ngIf="ticket">
-      <button mat-stroked-button color="primary" (click)="onEdit()">
+      <!-- <button mat-stroked-button color="primary" (click)="onEdit()">
         <mat-icon>edit</mat-icon>Edit
-      </button>
+      </button> -->
+      <h2>Ticket Details</h2>
       <!-- <button mat-stroked-button color="warn" (click)="onClose()" [disabled]="ticket.status === 'closed'">
       <button mat-stroked-button color="warn" (click)="onClose()" [disabled]="ticket.statusName === 'Closed'">
         <mat-icon>close</mat-icon>
