--- a/src/app/ticket/ticket-list/ticket-list.component.html
+++ b/src/app/ticket/ticket-list/ticket-list.component.html
@@ -93,7 +93,8 @@
           <mat-icon>visibility</mat-icon>
           View
         </button>
-        <button mat-button color="accent" (click)="openTicketcreation(ticket)">
+        <!-- <button mat-button color="accent" (click)="openTicketcreation(ticket)"> -->
+        <button mat-button color="accent" (click)="editByTicketId(ticket.id)">
           <mat-icon>edit</mat-icon>
           Edit
         </button>
