--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-
 <app-topbar *ngIf="!isLoginPage"></app-topbar> 
 
-
-<router-outlet />
+<div class="content">
+  <router-outlet></router-outlet>
+</div>
