--- a/src/app/layout/topbar/topbar.component.html
+++ b/src/app/layout/topbar/topbar.component.html
@@ -1,3 +1,4 @@
+<div class="stick-header col-12 " *ngIf="showComponent">
   <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
           <a class="navbar-brand" style="margin-top: 0px !important;font-family: 'bootstrap-icons';font-weight: 800;color: #3f328a;">
