--- a/src/app/layout/topbar/topbar.component.html
+++ b/src/app/layout/topbar/topbar.component.html
@@ -15,20 +15,20 @@
                   <li class="nav-item" routerLink="/lead/lead-list" routerLinkActive="active">
                       <a class="nav-link">Lead List</a>
                   </li>
-                  <li class="nav-item" routerLink="/followup/follow-up-list" routerLinkActive="active">
+                  <!-- <li class="nav-item" routerLink="/followup/follow-up-list" routerLinkActive="active">
                       <a class="nav-link">Follow-Up List</a>
-                  </li>
+                  </li> -->
                   <li class="nav-item" routerLink="/ticket/list" routerLinkActive="active">
                       <a class="nav-link">Ticket List</a>
-                  </li>
-                  <li class="nav-item" routerLink="/app-sidebar" routerLinkActive="active">
-                      <a class="nav-link">Settings</a>
                   </li>
                   <li class="nav-item" routerLink="/kanbanb" routerLinkActive="active">
                       <a class="nav-link">Kanban</a>
                   </li>
                   <li class="nav-item" routerLink="/cal" routerLinkActive="active">
                       <a class="nav-link">Calendar</a>
+                  </li>
+                  <li class="nav-item" routerLink="/app-sidebar" routerLinkActive="active">
+                      <a class="nav-link">Settings</a>
                   </li>
               </ul>
           </div>
