--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -6,7 +6,7 @@
 }
 
 .dashboard-container {
-  padding: 10px;
+  padding: 70px 20px 10px 20px;
   display: flex;
   flex-direction: column;
   gap: 20px;
