--- a/src/app/layout/topbar/topbar.component.scss
+++ b/src/app/layout/topbar/topbar.component.scss
@@ -1,8 +1,8 @@
 :host {
     // font-family: "Montserrat", serif;
-    // font-family: "Roboto", sans-serif;  //Roboto font
+    font-family: "Roboto", sans-serif;  //Roboto font
     // font-family: "Noto Sans", sans-serif;
-    font-family: "Lexend Deca", sans-serif;
+    // font-family: "Lexend Deca", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
@@ -10,7 +10,7 @@
   }
 
 
-  @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+  // @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 
 
@@ -151,7 +151,7 @@
       height: 40px;
       border: 2px solid #fff;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      transition: all 0.3s ease;
+      transition: 0.3s ease;
 
       &:hover {
         transform: scale(1.05);
@@ -242,6 +242,6 @@
   }
   to {
     opacity: 1;
-    transform: translateY(0);
+    trans: translateY(0);
   }
 }
