--- a/src/app/ticket/ticket-list/ticket-list.component.scss
+++ b/src/app/ticket/ticket-list/ticket-list.component.scss
@@ -1,7 +1,7 @@
 .ticket-list-container {
   max-width: 100%;
   margin: 80px auto 0;
-  padding: 24px;
+  padding: 0px 20px 10px 20px;
   position: relative;
   overflow: hidden;
   min-height: calc(100vh - 80px);
